--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "NODE_ENV=production bun src/http/server.ts",
     "test": "bun test",
     "generate": "drizzle-kit generate",
-    "migrate": "bun ./src/db/migrate.ts"
+    "migrate": "bun ./src/db/migrate.ts",
+    "studio": "bunx drizzle-kit studio"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
