--- a/package.json
+++ b/package.json
@@ -7,19 +7,11 @@
     "build": "bun build src/http/server.ts",
     "start": "NODE_ENV=production bun src/http/server.ts",
     "test": "bun test",
+    "studio": "drizzle-kit studio",
     "generate": "drizzle-kit generate",
     "migrate": "bun ./src/db/migrate.ts",
-    "studio": "bunx drizzle-kit studio"
-  },
-  "devDependencies": {
-    "@rocketseat/eslint-config": "^2.2.2",
-    "@types/bun": "latest",
-    "drizzle-kit": "^0.22.7",
-    "eslint": "^9.5.0",
-    "eslint-plugin-simple-import-sort": "^12.1.0"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "seed": "bun ./src/db/seed.ts",
+    "lint": "eslint --fix src *.ts"
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
@@ -28,5 +20,16 @@
     "elysia": "^1.0.25",
     "postgres": "^3.4.4",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.6.0",
+    "@faker-js/faker": "^8.4.1",
+    "@rocketseat/eslint-config": "^2.2.2",
+    "@types/bun": "latest",
+    "drizzle-kit": "^0.22.7",
+    "eslint-plugin-drizzle": "^0.2.3",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "typescript": "^5.5.3"
   }
 }
