--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.11",
     "drizzle-orm": "^0.31.2",
     "elysia": "^1.0.25",
+    "nodemailer": "^6.9.14",
     "postgres": "^3.4.4",
     "zod": "^3.23.8"
   },
@@ -29,6 +30,7 @@
     "@faker-js/faker": "^8.4.1",
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/bun": "latest",
+    "@types/nodemailer": "^6.4.15",
     "drizzle-kit": "^0.22.7",
     "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-simple-import-sort": "^12.1.0",
