--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --fix src *.ts"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.1.0",
     "@elysiajs/jwt": "^1.0.2",
     "@paralleldrive/cuid2": "^2.2.2",
     "chalk": "^5.3.0",
