--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "studio": "drizzle-kit studio",
     "generate": "drizzle-kit generate",
     "migrate": "bun ./src/db/migrate.ts",
+    "dev:prod": "bun --env-file=.env.production.local --watch src/http/server.ts",
+    "migrate:prod": "bun --env-file=.env.production.local ./src/db/migrate.ts",
+    "seed:prod": "bun --env-file=.env.production.local ./src/db/seed.ts",
     "seed": "bun ./src/db/seed.ts",
     "lint": "eslint --fix src *.ts"
   },
